--- a/app/src/main/res/layout/item_common_list.xml
+++ b/app/src/main/res/layout/item_common_list.xml
@@ -49,7 +49,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:gravity="center_vertical"
-            android:text="已接待"
+            android:text=""
             android:layout_marginRight="10dp"
             android:textColor="@color/cl_text_common"
             android:textSize="@dimen/common_textSize_default14"/>
