--- a/app/src/main/res/layout/topbar_umain_ss.xml
+++ b/app/src/main/res/layout/topbar_umain_ss.xml
@@ -56,8 +56,8 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:background="@null"
-        android:gravity="center_vertical"
+        android:background="@android:color/white"
+        android:gravity="center"
         android:textColor="@color/common_topbar_bgcolor"
         android:textSize="@dimen/common_textSize_default12"
         android:visibility="gone"/>
