--- a/app/src/main/res/layout/act_new_employee_register.xml
+++ b/app/src/main/res/layout/act_new_employee_register.xml
@@ -84,13 +84,13 @@
                         android:textSize="@dimen/common_textSize_default12"/>
 
                     <EditText
-                        android:background="@drawable/et_regist_common_style"
                         android:id="@+id/RegisterActivity_et_name"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="20dp"
                         android:layout_weight="0.7"
+                        android:background="@drawable/et_regist_common_style"
                         android:gravity="center_vertical"
                         android:hint="@string/RegisterActivity_et_name"
                         android:paddingLeft="20dp"
@@ -127,12 +127,12 @@
                         android:textSize="@dimen/common_textSize_default12"/>
 
                     <Spinner
-                        android:background="@drawable/et_regist_common_style"
                         android:id="@+id/spinnerDepartment"
                         android:layout_width="0dp"
                         android:layout_height="30dp"
                         android:layout_marginLeft="20dp"
                         android:layout_weight="0.5"
+                        android:background="@drawable/et_regist_common_style"
                         android:gravity="center"
                         android:paddingLeft="20dp"
                         android:singleLine="true"
@@ -168,12 +168,12 @@
                         android:textSize="@dimen/common_textSize_default12"/>
 
                     <Spinner
-                        android:background="@drawable/et_regist_common_style"
                         android:id="@+id/spinnerType"
                         android:layout_width="0dp"
                         android:layout_height="30dp"
                         android:layout_marginLeft="20dp"
                         android:layout_weight="0.5"
+                        android:background="@drawable/et_regist_common_style"
                         android:gravity="center"
                         android:paddingLeft="20dp"
                         android:singleLine="true"
@@ -215,8 +215,8 @@
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="20dp"
                         android:layout_weight="0.66"
-                        android:gravity="center_vertical"
                         android:background="@drawable/et_regist_common_style"
+                        android:gravity="center_vertical"
                         android:hint="@string/RegisterActivity_employee_id"
                         android:paddingLeft="20dp"
                         android:singleLine="true"
@@ -294,26 +294,105 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dip"
                     android:background="@color/bar_line"/>
-            </LinearLayout>
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white">
-
-                <Button
-                    android:id="@+id/Register_btn_register"
+                <LinearLayout
+                    android:id="@+id/layoutPunchStart"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginTop="40dp"
-                    android:background="@drawable/btn_style"
-                    android:text="添加"
-                    android:textColor="#ffffff"
-                    android:textSize="16sp"
-                    />
-            </RelativeLayout>
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.25"
+                    android:gravity="center_vertical"
+                    android:padding="10dp"
+                    android:weightSum="1">
+
+                    <TextView
+                        android:id="@+id/tvStartTime"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.3"
+                        android:gravity="right|center_vertical"
+                        android:padding="5dp"
+                        android:singleLine="true"
+                        android:text="上班时间"
+                        android:textColor="@color/textColor"
+                        android:textSize="@dimen/common_textSize_default12"/>
+
+                    <TextView
+                        android:id="@+id/tv_punchStart"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="20dp"
+                        android:layout_weight="0.7"
+                        android:background="@drawable/et_regist_common_style"
+                        android:gravity="center_vertical"
+                        android:lines="1"
+                        android:paddingLeft="20dp"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/common_textSize_default12">
+                    </TextView>
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dip"
+                    android:background="@color/bar_line"/>
+
+                <LinearLayout
+                    android:id="@+id/layoutPunchEnd"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.25"
+                    android:gravity="center_vertical"
+                    android:padding="10dp"
+                    android:weightSum="1">
+
+                    <TextView
+                        android:id="@+id/tvEndTime"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.3"
+                        android:gravity="right|center_vertical"
+                        android:padding="5dp"
+                        android:singleLine="true"
+                        android:text="下班时间"
+                        android:textColor="@color/textColor"
+                        android:textSize="@dimen/common_textSize_default12"/>
+
+                    <TextView
+                        android:id="@+id/tv_punchEnd"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="20dp"
+                        android:layout_weight="0.7"
+                        android:background="@drawable/et_regist_common_style"
+                        android:gravity="center_vertical"
+                        android:lines="1"
+                        android:paddingLeft="20dp"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/common_textSize_default12">
+                    </TextView>
+                </LinearLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white">
+
+                    <Button
+                        android:id="@+id/Register_btn_register"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:layout_marginTop="40dp"
+                        android:background="@drawable/btn_style"
+                        android:text="添加"
+                        android:textColor="#ffffff"
+                        android:textSize="16sp"
+                        />
+                </RelativeLayout>
 
 
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
