--- a/app/src/main/res/layout/dialog_confirm.xml
+++ b/app/src/main/res/layout/dialog_confirm.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical" >
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@android:color/white"
+              android:gravity="center"
+              android:orientation="vertical">
 
     <TextView
         android:id="@+id/dialog_title"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:background="@android:color/white"
         android:gravity="center"
         android:textColor="#333333"
-        android:textSize="18sp" />
+        android:textSize="18sp"/>
 
     <TextView
         android:id="@+id/dialog_content"
@@ -21,17 +23,18 @@
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
         android:layout_marginTop="14dp"
+        android:background="@android:color/white"
         android:textColor="#333333"
-        android:textSize="14sp" />
+        android:textSize="14sp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="17dp"
         android:layout_marginLeft="18dp"
         android:layout_marginRight="18dp"
-        android:layout_marginBottom="17dp"
         android:layout_marginTop="14dp"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/cancel_btn"
@@ -39,31 +42,31 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/confirm_dialog_cancel_btn_bg"
+            android:clickable="true"
             android:gravity="center"
+            android:onClick="cancel"
             android:paddingBottom="11dp"
             android:paddingTop="11dp"
-            android:onClick="cancel"
-            android:clickable="true"
             android:text="@string/cancel"
-            android:textColor="#333333" />
+            android:textColor="#333333"/>
 
         <View
             android:layout_width="14dp"
-            android:layout_height="1dp" />
+            android:layout_height="1dp"/>
 
         <TextView
-            android:onClick="confirm"
-            android:clickable="true"
             android:id="@+id/confirm_btn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/confirm_dialog_confirm_btn_bg"
+            android:clickable="true"
             android:gravity="center"
+            android:onClick="confirm"
             android:paddingBottom="11dp"
             android:paddingTop="11dp"
             android:text="@string/confirm"
-            android:textColor="#ffffff" />
+            android:textColor="#ffffff"/>
     </LinearLayout>
 
 </LinearLayout>
